--- a/frontend/src/components/quotation.css
+++ b/frontend/src/components/quotation.css
@@ -49,3 +49,13 @@
   margin-top: 10px;
   color: var(--dark-text-color);
 }
+
+@media only screen and (max-width: 480px) {
+  #quotation h2 {
+    font-size: 2.5em;
+    /* width: 80%; */
+  }
+  #quotation blockquote {
+    width: 90%;
+  }
+}
