--- a/frontend/src/components/slidersection.css
+++ b/frontend/src/components/slidersection.css
@@ -1,41 +1,43 @@
-.slider_section {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+.slider-section {
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+  justify-content: center;
   align-items: center;
-  padding: 75px 0;
-  background-color: #edebe4;
-  position: relative;
   height: 90vh;
+  background-color: #edebe4;
 }
 
-.slider_section .row {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+.slider-section .single-slide {
+  display: flex;
+  justify-content: center;
   align-items: center;
+  padding: 0 70px 5vh 70px;
 }
 
-.slider_section #customCarousel1 {
-  width: 100%;
-  position: unset;
+.slider-section .single-slide .img-box {
+  width: 90%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 }
 
-.slider_section .detail-box h5 {
+.slider-section .single-slide .img-box img {
+  height: 50vh;
+}
+
+.slider-section .single-slide .detail-box h5 {
   color: var(--accent);
 }
 
-.slider_section .detail-box h1 {
+.slider-section .single-slide .detail-box h1 {
   font-weight: bold;
   margin: 15px 0;
-  line-height: 58px;
+  line-height: 60px;
   font-size: 3rem;
   font-family: var(--heading-font);
 }
 
-.slider_section .detail-box p {
+.slider-section .single-slide .detail-box p {
   display: inline-block;
   padding: 10px 45px;
   background: var(--accent);
@@ -44,18 +46,7 @@
   border: 1px solid var(--accent);
 }
 
-.slider_section .img-box {
-  height: 50vh;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-}
-
-.slider_section .img-box img {
-  height: 50vh;
-}
-
-.slider_section .carousel_btn_box {
+.slider-section .carousel_btn_box {
   position: absolute;
   top: 84%;
   left: 50%;
@@ -63,13 +54,81 @@
   width: 150px;
 }
 
-.slider_section .carousel_btn_box a {
+.slider-section .carousel_btn_box a {
   width: 50px;
   height: 50px;
   background: var(--main-bg);
   border-radius: 50%;
 }
 
-.slider_section .carousel_btn_box a i {
-  text-align: center;
+.slider-section #customCarousel1 {
+  width: 100%;
+  position: unset;
+}
+
+@media only screen and (min-width: 1366px) {
+  .slider-section .single-slide .img-box {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .slider-section .single-slide {
+    flex-direction: column;
+    text-align: center;
+  }
+  .slider-section .carousel_btn_box {
+    top: 87%;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .slider-section .carousel_btn_box {
+    top: 90%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .slider-section .single-slide .img-box {
+    height: 45vh;
+  }
+  .slider-section .single-slide .img-box img {
+    height: 45vh;
+  }
+  .slider-section .detail-box h1 {
+    font-size: 2.4rem !important;
+    line-height: 40px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .slider-section .single-slide {
+    padding: 0;
+  }
+  .slider-section .single-slide .detail-box {
+    padding: 0 30px;
+  }
+  .slider-section .img-box {
+    height: 35vh !important;
+    width: 100%;
+  }
+  .slider-section .img-box img {
+    height: 35vh !important;
+  }
+  .slider-section .detail-box h1 {
+    font-size: 1.6rem !important;
+    line-height: 50px !important;
+  }
+  .slider-section .carousel_btn_box {
+    top: 88%;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .slider-section .img-box {
+    height: 30vh !important;
+  }
+  .slider-section .img-box img {
+    height: 30vh !important;
+  }
 }
