--- a/frontend/src/components/quotation.css
+++ b/frontend/src/components/quotation.css
@@ -53,7 +53,8 @@
 @media only screen and (max-width: 480px) {
   #quotation h2 {
     font-size: 2.5em;
-    /* width: 80%; */
+    padding: 0 30px;
+    line-height: 60px;
   }
   #quotation blockquote {
     width: 90%;
