--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -119,10 +119,14 @@ a:hover {
 /* MOBILE */
 
 @media only screen and (max-width: 480px) {
+  .section-header h2 {
+    font-size: 2.2rem;
+  }
   .error__div h1 {
     font-size: 30px;
   }
   .error__div p {
     font-size: 16px !important;
+    padding: 0 15px;
   }
 }
