--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -184,11 +184,20 @@ nav.fix-navbar h2 {
   }
 
   @keyframes close-icon-spin {
-    from {
-      transform: rotate(0deg);
+    0% {
+      transform: translateX(0);
     }
-    to {
-      transform: rotate(360deg);
+    25% {
+      transform: translateX(5px);
+    }
+    50% {
+      transform: translateX(-5px);
+    }
+    75% {
+      transform: translateX(5px);
+    }
+    100% {
+      transform: translateX(0);
     }
   }
 
